--- a/config.json
+++ b/config.json
@@ -16,12 +16,12 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
-    "PREFIX": "/",
+    "BOTNAME": "𝐅𝐌𝐙 𝐀𝐃𝐈 ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
+    "PREFIX": "-",
     "ADMINBOT": [
-        "100000478146113",
-        "61576520552554",
-        "61550035211214"
+        "61586750577503",
+        "61586638122156",
+        "61586638122156"
     ],
     "NDH": [
         "100000478146113"
