--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,137 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261586848053396%22%3A%22qYf2fGGQ%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.158Z",
+        "lastAccessed": "2026-01-21T11:31:41.158Z"
+    },
+    {
+        "key": "datr",
+        "value": "kaxwaX6tezQI7gSZOmW5Bl7w",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.158Z",
+        "lastAccessed": "2026-01-21T11:31:41.158Z"
+    },
+    {
+        "key": "sb",
+        "value": "kqxwaZyf76lnOiifxlM9hlEO",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.158Z",
+        "lastAccessed": "2026-01-21T11:31:41.158Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.158Z",
+        "lastAccessed": "2026-01-21T11:31:41.158Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.158Z",
+        "lastAccessed": "2026-01-21T11:31:41.158Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.5",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.158Z",
+        "lastAccessed": "2026-01-21T11:31:41.158Z"
+    },
+    {
+        "key": "wd",
+        "value": "432x960",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.158Z",
+        "lastAccessed": "2026-01-21T11:31:41.158Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61586848053396",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.158Z",
+        "lastAccessed": "2026-01-21T11:31:41.158Z"
+    },
+    {
+        "key": "xs",
+        "value": "27%3ADCZQ0u7PM8Y7cw%3A2%3A1768992083%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.158Z",
+        "lastAccessed": "2026-01-21T11:31:41.158Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.158Z",
+        "lastAccessed": "2026-01-21T11:31:41.159Z"
+    },
+    {
+        "key": "pas",
+        "value": "61586848053396%3Ay2ZqZWXAxW",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.159Z",
+        "lastAccessed": "2026-01-21T11:31:41.159Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B843x432x2.5",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.159Z",
+        "lastAccessed": "2026-01-21T11:31:41.159Z"
+    },
+    {
+        "key": "fr",
+        "value": "0NtLuljIPeLPF9qcE.AWdEMYBJo7f1lFZ6DQTnozwhwclm9PaN6GUbYNxxF8VxylcrFrQ.BpcKyS..AAA.0.0.BpcLi9.AWdnDbarxsyE0fqTBpe1TwT6rz4",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.159Z",
+        "lastAccessed": "2026-01-21T11:31:41.159Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A3058%3Btimestamp%3A1768995005",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.159Z",
+        "lastAccessed": "2026-01-21T11:31:41.159Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100426440%3BT%3A29483250",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-21T11:31:41.159Z",
+        "lastAccessed": "2026-01-21T11:31:41.159Z"
+    }
+]
